--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ python-dotenv==0.20.0
 gunicorn==20.1.0
 honcho==1.1.0
 
-# Code quality
+# Code qualityy
 pylint==2.14.0
 flake8==4.0.1
 black==22.3.0
